--- a/gulimall-auth-server/src/main/resources/templates/login.html
+++ b/gulimall-auth-server/src/main/resources/templates/login.html
@@ -83,7 +83,7 @@
 <!--							<a href="https://api.weibo.com/oauth2/authorize?client_id=4027135126&response_type=code&redirect_uri=http://auth.gulimall.com/oauth2.0/weibo/success">-->
 <!--								<img style="width:50px; height: 18px" src="/static/login/JD_img/weibo.png" />-->
 <!--							</a>-->
-							<a href="　https://gitee.com/oauth/authorize?client_id=4f6762ba5826ffb2574608c75ffa64269b9d49838215ef2a20e15827e5ad2767&redirect_uri=http://127.0.0.1:20000/web/oauth2/gitee/success&response_type=code">
+							<a href="https://gitee.com/oauth/authorize?client_id=4f6762ba5826ffb2574608c75ffa64269b9d49838215ef2a20e15827e5ad2767&redirect_uri=http://127.0.0.1:20000/oauth2.0/gitee/success&response_type=code">
 								<img style="width:50px; height: 18px" src="/static/login/JD_img/gitee.png" />
 							</a>
 						</li>
