--- a/gulimall-order/src/main/resources/templates/pay.html
+++ b/gulimall-order/src/main/resources/templates/pay.html
@@ -105,7 +105,8 @@
             </li>
             <li>
                 <img src="/static/order/pay/img/zhifubao.png" style="weight:auto;height:30px;" alt="">
-                <a th:href="'http://order.gulimall.com/payOrder?orderSn=' + ${submitOrderResp.order.orderSn}">支付宝</a>
+<!--                <a th:href="'http://order.gulimall.com/payOrder?orderSn=' + ${submitOrderResp.order.orderSn}">支付宝</a>-->
+                <a th:href="'http://127.0.0.1:9000/payOrder?orderSn=' + ${submitOrderResp.order.orderSn}">支付宝</a>
             </li>
         </ul>
     </div>
