--- a/gulimall-product/src/main/resources/templates/index.html
+++ b/gulimall-product/src/main/resources/templates/index.html
@@ -107,7 +107,8 @@
                 </li>
                 <span>|</span>
                 <li>
-                    <a href="http://member.gulimall.com/memberOrder.html">我的订单</a>
+<!--                    <a href="http://member.gulimall.com/memberOrder.html">我的订单</a>-->
+                    <a href="http://127.0.0.1:8000/memberOrder.html">我的订单</a>
                 </li>
 
 
